syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ProductCatalogProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Catalog
message ProdCatalogFlatData {
    option (routines.entity_type) = "ProdCatalog";
    option (routines.keys).keys = "prod_catalog_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: prodCatalogId
    string prod_catalog_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string catalog_name = 2 [(routines.opts).field_type = "name"];
    routines.Indicator use_quick_add = 3 [(routines.opts).field_type = "indicator"];
    string style_sheet = 4 [(routines.opts).field_type = "url"];
    string header_logo = 5 [(routines.opts).field_type = "url"];
    string content_path_prefix = 6 [(routines.opts).field_type = "long-varchar"];
    string template_path_prefix = 7 [(routines.opts).field_type = "long-varchar"];
    routines.Indicator view_allow_perm_reqd = 8 [(routines.opts).field_type = "indicator"];
    routines.Indicator purchase_allow_perm_reqd = 9 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp last_updated_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 11 [(routines.opts).field_type = "date-time"];
    string tenant_id = 12 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 19;
    map<string, google.protobuf.Any> attachments = 20 ;
}

message ProdCatalogKey{
    string prod_catalog_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ProdCatalogList{
    repeated ProdCatalogFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProdCatalogs` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// flat-ent: Catalog Category Association
message ProdCatalogCategoryFlatData {
    option (routines.entity_type) = "ProdCatalogCategory";
    option (routines.keys).keys = "prod_catalog_id, product_category_id, prod_catalog_category_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: prodCatalogId, productCategoryId, prodCatalogCategoryTypeId, fromDate
    string prod_catalog_id = 1 [(routines.opts).field_type = "id"];
    string product_category_id = 2 [(routines.opts).field_type = "id"];
    string prod_catalog_category_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 5 [(routines.opts).field_type = "date-time"];
    int64 sequence_num = 6 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp last_updated_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 8 [(routines.opts).field_type = "date-time"];
    string id = 9 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string tenant_id = 10 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 15;
    map<string, google.protobuf.Any> attachments = 16 ;
}

message ProdCatalogCategoryKey{
    string prod_catalog_id = 1 [(routines.opts).field_type = "id"];
    string product_category_id = 2 [(routines.opts).field_type = "id"];
    string prod_catalog_category_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
}

message ProdCatalogCategoryList{
    repeated ProdCatalogCategoryFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProdCatalogCategories` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

